<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="admob_app_id">ca-app-pub-2694230473374735~8737808568</string>
	<string name="admob_unit_id">ca-app-pub-2694230473374735/8718337704</string>

    <string name="app_name">Android SQLite Benchmark</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start Benchmark</string>
    <string name="settings">Settings</string>
    <string name="test1">INSERT &amp; Retrieve: </string>
    <string name="test2">INSERT &amp; Retrieve in a transaction: </string>
    <string name="test3">INSERT into an indexed table &amp; Retrieve: </string>
    <string name="test4">SELECT &amp; Retrieve without an index: </string>
    <string name="test5">SELECT on a string comp &amp; Retrieve: </string>
    <string name="test6">Creating an index : </string>
	<string name="test7">SELECT &amp; Retrieve with an index: </string>
	<string name="test8">UPDATE &amp; Retrieve without an index:</string>
	<string name="test9">UPDATE &amp; Retrieve with an index: </string>
	<string name="test10">Text UPDATE &amp; Retrieve with an index: </string>
	<string name="test11">INSERT from a SELECT &amp; Retrieve: </string>
	<string name="test12">DELETE &amp; Retrieve without an index: </string>
	<string name="test13">DELETE &amp; Retrieve with an index: </string>
	<string name="test14">DROP TABLE : </string>
	<string name="overall">Overall : </string>
	<string name="result">See Result</string>
	<string name="setdefault">Set Default</string>
	<string name="apply">Apply</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>

	<string name="waiting">waiting...</string>
	<string name="running">running...</string>
	<string name="preparing">preparing test data...</string>
	<string name="benchmarking">now benchmarking...</string>
	<string name="canceled">canceled</string>

</resources>
